// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package org.example.valueentity;

option java_outer_classname = "CounterDomain";

message CounterState {
  int32 value = 1;
}
